# AgentForge-Harness

./: .coverage  .gitignore  AI_HARNESS_CODEBASE_REVIEW_AND_UPGRADE_REPORT.md  CHANGELOG.md  Dockerfile  HOW_TO_USE.md  INDEX.md  RELEASE_CHECKLIST.md  VERSION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aih/: __init__.py  __main__.py  audit.py  cli.py  config.py  constants.py  display.py  doctor.py  health.py  intelligent_router.py  output.py  prompts.py  release.py  routing.py  security.py  shell.py
aih/agents/: base.py  manager.py  orchestrator.py  router_agent.py  tools.py
checklists/: hallucination-control.md  system-health-check.md  validation-gate.md
docs/: DEVELOPER.md  TOOLS.md  USER.md
evals/local-model-benchmark/: E1-coding-repair.md  E2-system-diagnostic.md  E3-long-context-summary.md  E4-structured-extraction.md  E5-safety-privacy.md  E6-adversarial-assumption.md  README.md
packs/: codex-power-pack.md  local-model-benchmark-pack.md  market-ready-prompt-product.md
playbooks/: codex-operating-loop.md  local-model-lab.md  upgrade-time-runbook.md
protocols/: evidence-led-prompting.md  model-routing.md  production-readiness.md
rubrics/: model-eval-rubric.md  output-quality-rubric.md
runs/2026-06-26-fix-all-errors-in-the-codebase-and-optimize-for-performance-then-clean/: codex-final.md  metadata.txt  prompt.md  request.txt
runs/2026-06-26-fix-well-i-am-still-waiting-for-you-to-make-this-harness-worth-while-s/: codex-final.md  metadata.txt  prompt.md
runs/2026-06-26-fix-well-i-am-still-waiting-for-you-to-make-this-harness-worth-while-s-02/: codex-final.md  metadata.txt  prompt.md  request.txt
runs/2026-06-26-harness-smoke-test/: handoff.md  prompt.md
runs/2026-06-26-i-want-you-to-first-do-a-comprehensive-codebase-review-and-fix-any-and/: codex-final.md  execution-plan.md  metadata.txt  prompt.md  request.txt
runs/2026-06-26-system-diagnostic/: action-log.md  completion-summary.md  monthly-health-first-run.path  moved-files.tsv  ollama-override.conf  power-loss-mitigation.md  report.md
runs/releases/2026-06-26-1-3-0-release-packets/: doctor.json  manifest.json  support-note.md  validation.md
runs/releases/2026-06-28-production-readiness-v2-0/: doctor.json  example-prompt.md  known-limitations.md  manifest.json  validation.md
runs/system-health/: monthly-20260626-201014.txt
scripts/: aih  aih-completion.sh  monthly-health-snapshot  run-local-model-eval  weekly-maintenance
swarm/: agent-swarm-manifest.md  roles.md
templates/: 00-universal-task-brief.md  01-codex-implementation.md  02-local-model-eval.md  03-debug-diagnostic.md  04-code-review.md  05-research-grounding.md  06-data-extraction.md  08-architecture-decision.md  09-security-threat-model.md
tests/: test_agents.py  test_aih.py  test_audit.py  test_cli.py  test_config.py  test_config2.py  test_coverage_gap.py  test_display.py  test_doctor.py  test_health.py  test_intelligent_router.py  test_orchestrator.py  test_output.py  test_prompts.py  test_release.py  test_routing.py  test_security.py  test_shell.py  test_tools.py
