[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-harness"
version = "2.0.0"
description = "Action wrapper for AI coding assistants — evidence discipline, safety gates, and audit trails in one command."
readme = "HOW_TO_USE.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dmitriy"}]
keywords = ["ai", "llm", "codex", "prompt-engineering", "developer-tools", "ai-quality", "code-review"]
dependencies = [
    "pydantic>=2.0",
    "tqdm>=4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
toml = ["tomli>=2.0; python_version < '3.11'"]

[project.scripts]
aih = "aih.cli:main_entry"

[project.urls]
Repository = "https://github.com/dmitriy718/AgentForge-Harness"

[tool.setuptools.packages.find]
include = ["aih*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 140
